[gd_scene load_steps=9 format=3 uid="uid://b8nmdlgjv27gk"]

[ext_resource type="Script" uid="uid://j3mjtuxv4amv" path="res://scenes/crops/berry.gd" id="1_tyw47"]
[ext_resource type="Resource" uid="uid://cc7ypp7b0xktf" path="res://scripts/inventory/items/berries/durin_berry.tres" id="2_tyw47"]
[ext_resource type="Texture2D" uid="uid://c35p6kr6v46w4" path="res://pokemon-assets/Graphics/Characters/berrytree_DURINBERRY.png" id="3_tyw47"]
[ext_resource type="PackedScene" uid="uid://bbt04cvqw6sjg" path="res://scenes/crops/watering_particles.tscn" id="4_stgiu"]
[ext_resource type="PackedScene" uid="uid://c2vb7n7vmwxn2" path="res://scenes/crops/flowering_particles.tscn" id="5_in6by"]
[ext_resource type="PackedScene" uid="uid://30ayb03hl4mi" path="res://scenes/crops/growth_cycle_component.tscn" id="6_mhws8"]
[ext_resource type="PackedScene" uid="uid://cln3rkgqe2581" path="res://scenes/component/hurt_component.tscn" id="7_6uqjw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e6ik6"]
size = Vector2(13, 10)

[node name="Berry" type="Node2D" groups=["crops"]]
script = ExtResource("1_tyw47")
harvest_item = ExtResource("2_tyw47")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -11)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_tyw47")
hframes = 4
vframes = 4
frame = 1

[node name="WateringParticles" parent="." instance=ExtResource("4_stgiu")]

[node name="FloweringParticles" parent="." instance=ExtResource("5_in6by")]

[node name="GrowthCycleComponent" parent="." instance=ExtResource("6_mhws8")]

[node name="HurtComponent" parent="." instance=ExtResource("7_6uqjw")]
collision_layer = 32
collision_mask = 16
tool = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtComponent"]
position = Vector2(-0.5, -1)
shape = SubResource("RectangleShape2D_e6ik6")
